asteria/core/tests/errors/elaboration_errors/type_constructor_not_in_scope_hint_closest_type_constructors.asteriacore
data Bar (a : Type) where ;;

data Fooo (a : Type) where ;;

data Foo where ;;

x : Test$Fo()
  = x
  ;;
